--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,10 +1,12 @@
-<div id="menu">
-  <a href="/"><b>home</b></a>
-  <a href="/section1/">section1</a>
-  <a href="/section2/">section2</a>
-
-  <span class="right">
-    <a href="/posts/">posts</a>
-    <a href="/about/">about</a>
-  </span>
-</div>
+<nav class="site-nav" aria-label="Main navigation" role="navigation">
+  <ul class="nav-list">
+    <li><a href="{{ '/' | relative_url }}" {% if page.url == '/' %}aria-current="page"{% endif %}><strong>Home</strong></a></li>
+    <li><a href="{{ '/section1/' | relative_url }}" {% if page.url contains '/section1/' %}aria-current="page"{% endif %}>Section 1</a></li>
+    <li><a href="{{ '/section2/' | relative_url }}" {% if page.url contains '/section2/' %}aria-current="page"{% endif %}>Section 2</a></li>
+  </ul>
+  
+  <ul class="nav-list nav-secondary">
+    <li><a href="{{ '/posts/' | relative_url }}" {% if page.url contains '/posts/' %}aria-current="page"{% endif %}>Posts</a></li>
+    <li><a href="{{ '/about/' | relative_url }}" {% if page.url == '/about/' %}aria-current="page"{% endif %}>About</a></li>
+  </ul>
+</nav>
