--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,5 +33,8 @@
 
 {% include footer.html %}
 
+<!-- Table of Contents Generator Script -->
+<script src="{{ '/assets/toc.js' | relative_url }}"></script>
+
 </body>
 </html>
